apps/zerobyte/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerobyte
  labels:
    app.kubernetes.io/name: zerobyte
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 4096
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: zerobyte
