apps/zerobyte/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zerobyte

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`zerobyte.internal`)
      kind: Rule
      services:
        - name: zerobyte
          port: 4096
